[workspace]
members = [
    "pdf",
    "pdf_derive",
    "render",
    "view",
    "examples/pdf2image",
]

[workspace.package]
version = "0.8.0"
license = "MIT"
authors = ["Erlend Langseth <3rlendhl@gmail.com>", "Sebastian Köln <s3bk@protonmail.com>"]
repository = "https://github.com/pdf-rs/pdf"
keywords = ["pdf"]
readme = "README.md"
edition = "2021"


[workspace.dependencies]
pdf.path = "pdf"
pdf_derive.path = "pdf_derive"
render.path = "render"
view.path = "view"
globalcache = { git = "https://github.com/s3bk/cachelib", features = ["sync"] }
istring = { version = "0.3.2", git = "https://github.com/s3bk/istring", features = ["std", "size"] }

[patch.crates-io]
pathfinder_gl = { git = "https://github.com/servo/pathfinder" }
pathfinder_webgl = { git = "https://github.com/servo/pathfinder" }
pathfinder_gpu = { git = "https://github.com/servo/pathfinder" }
pathfinder_content = { git = "https://github.com/servo/pathfinder" }
pathfinder_color = { git = "https://github.com/servo/pathfinder" }
pathfinder_geometry = { git = "https://github.com/servo/pathfinder" }
pathfinder_renderer = { git = "https://github.com/servo/pathfinder" }
pathfinder_resources = { git = "https://github.com/servo/pathfinder" }
pathfinder_export = { git = "https://github.com/servo/pathfinder" }
pathfinder_simd = { git = "https://github.com/servo/pathfinder" }
