[package]
name = "pdf"
description = "PDF reader"
version.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
license.workspace = true
edition.workspace = true

[features]
mmap = ["memmap2"]
dump = ["tempfile"]
threads = ["jpeg-decoder/default"]
sync = []

[dependencies]
pdf_derive.workspace = true
snafu = "0.7.1"
inflate = "0.4.5"
deflate = "1.0.0"
itertools = "0.10.0"
memmap2 = { version = "0.5.0", optional = true }
weezl = "0.1.4"
once_cell = "1.5.2"
log = "0.4.14"
tempfile = { version = "3.2.0", optional = true }
md5 = "0.7"
jpeg-decoder = { version = "0.2.6", default-features = false }
aes = "0.7.5"
block-modes = "0.8.1"
stringprep = "0.1.2"
sha2 = "0.10.2"
fax = "0.2.0"
euclid = { version = "0.22.7", optional = true }
bitflags = "1.3"
istring = { version = "0.3.2", git = "https://github.com/s3bk/istring", features = ["std", "size"] }
datasize = { git = "https://github.com/s3bk/datasize-rs" }
globalcache = { version = "0.2", features = ["sync"] }

[dev-dependencies]
glob = "0.3.0"

[lib]
doctest = false

[[example]]
name = "content"

[[example]]
name = "metadata"

[[example]]
name = "names"

[[example]]
name = "read"
