[package]
name = "pdf_derive"
version.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
syn = { version = "1", features = ["full", "extra-traits"] }
proc-macro2 = "1.0.24"
quote = "1"

[lib]
proc-macro = true
