[package]
name = "pdf_render"
version.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
license.workspace = true
edition.workspace = true

[features]
unstable = []

[[bench]]
name = "render"
harness = false

[dependencies.pdf]
default-features=false 
path = "../pdf"

[dependencies]
pathfinder_renderer = { git = "https://github.com/servo/pathfinder" }
pathfinder_color = { git = "https://github.com/servo/pathfinder" }
pathfinder_geometry = { git = "https://github.com/servo/pathfinder" }
pathfinder_resources = { git = "https://github.com/servo/pathfinder" }
pathfinder_content = { git = "https://github.com/servo/pathfinder" }
log = "0.4"
font = { git = "https://github.com/pdf-rs/font" }
pdf_encoding = "0.3"
itertools = "*"
image = "0.24.2"
instant = "*"
custom_debug_derive = "*"
globalcache = { git = "https://github.com/s3bk/cachelib", features = ["sync"] }
istring = { git = "https://github.com/s3bk/istring" }
once_cell = "*"
serde_json = "*"

[dev-dependencies]
criterion = "0.3"
env_logger = "*"
